--- a/tasktracker_crud.client/src/App.css
+++ b/tasktracker_crud.client/src/App.css
@@ -1,19 +1,41 @@
 ﻿#root {
-    max-width: 1280px;
-    margin: 0 auto;
     padding: 2rem;
     text-align: center;
+
+
 }
 
 tr:nth-child(even) {
     background: #F2F2F2;
+
 }
 
 tr:nth-child(odd) {
     background: #FFF;
+
+}
+
+tr {
+
+    overflow: scroll;
 }
 
 th, td {
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 0.2rem 0.7rem;
+    min-width: 200px;
+    max-width: 700px;
+}
+
+.bdRow {
+    font-size: 10px;
+}
+
+
+table {
+    color: black;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+}
 }
