--- a/tasktracker_crud.client/src/index.css
+++ b/tasktracker_crud.client/src/index.css
@@ -1,17 +1,14 @@
+
+/*This is the main global .css file.  
+This will apply first, to all pages by default.  */
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: black;
+  background-color: #e0e0e0;
 }
+
 
 a {
   font-weight: 500;
@@ -23,11 +20,10 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+
+
+
+
 }
 
 h1 {
@@ -66,3 +62,5 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
